2006-11-17 Braden McDaniel  <braden@endoframe.com>

	Write parser error and warning messages using
	openvrml::browser::err rather than use the libantlr default (which
	writes directly to std::cerr).

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(Vrml97Parser::Vrml97Parser(openvrml::browser &,
	antlr::TokenStream &, const std::string &)): Construct with an
	openvrml::browser; call antlr::Parser::setFilename instead of
	adding a member variable for the uri.
	(Vrml97Parser::reportError(const antlr::RecognitionException &)):
	Overridden from antlr::Parser; send the error message to
	openvrml::browser::err.
	(Vrml97Parser::reportError(const std::string &)):
	Overridden from antlr::Parser; send the error message to
	openvrml::browser::err.
	(Vrml97Parser::reportWarning(const std::string &)):
	Overridden from antlr::Parser; send the warning message to
	openvrml::browser::err.
	(Vrml97Parser::browser_): Added a pointer to the browser.
	(vrmlScene): Use getFilename.
	(nodeStatement): Use getFilename.
	(proto): Use getFilename.
	(protoInterfaceDeclaration): Use getFilename.
	(protoNodeStatement): Use getFilename.
	(externproto): Use getFilename.
	(externInterfaceDeclaration): Use getFilename.
	(routeStatement): Use getFilename.
	(protoRouteStatement): Use getFilename.
	(node): Use getFilename.
	(nodeBodyElement): Use getFilename.
	(scriptInterfaceDeclaration): Use getFilename.
	(scriptFieldInterfaceDeclaration): Use getFilename.
	(protoNode): Use getFilename.
	(protoNodeBodyElement): Use getFilename.
	(protoScriptInterfaceDeclaration): Use getFilename.
	(protoScriptFieldInterfaceDeclaration): Use getFilename.
	* src/libopenvrml/openvrml/X3DVrmlParser.g
	(X3DVrmlParser::X3DVrmlParser(openvrml::browser &,
	antlr::TokenStream &, const std::string &)): Construct with an
	openvrml::browser; call antlr::Parser::setFilename instead of
	adding a member variable for the uri.
	(X3DVrmlParser::reportError(const antlr::RecognitionException &)):